--- a/cc/google/fhir/fhir_path/BUILD
+++ b/cc/google/fhir/fhir_path/BUILD
@@ -192,9 +192,11 @@ cc_test(
         ":fhir_path_validation",
         ":r4_fhir_path_validation",
         ":stu3_fhir_path_validation",
+        "//cc/google/fhir/status:statusor",
         "//proto/r4:uscore_cc_proto",
         "//proto/r4:uscore_codes_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_cc_proto",
         "//proto/r4/core/resources:encounter_cc_proto",
         "//proto/r4/core/resources:medication_knowledge_cc_proto",
         "//proto/r4/core/resources:observation_cc_proto",
