Increases FhirPackageTest size to medium, since it times out from time to time.
PiperOrigin-RevId: 307950724

--- a/java/BUILD
+++ b/java/BUILD
@@ -671,7 +671,7 @@ java_test(
 
 java_test(
     name = "FhirPackageTest",
-    size = "small",
+    size = "medium",
     srcs = ["src/test/java/com/google/fhir/protogen/FhirPackageTest.java"],
     data = [
         "//spec:fhir_r4_package.zip",
