--- a/py/google/fhir/stu3/BUILD
+++ b/py/google/fhir/stu3/BUILD
@@ -1,3 +1,9 @@
+load(
+    "@rules_python//python:python.bzl",
+    "py_library",
+    "py_test",
+)
+
 licenses(["notice"])
 
 package(default_visibility = ["//visibility:public"])
@@ -7,6 +13,7 @@ py_library(
     srcs = [
         "util.py",
     ],
+    srcs_version = "PY3",
     deps = [
         "//proto/stu3:resources_py_pb2",
     ],
@@ -17,7 +24,7 @@ py_test(
     srcs = [
         "util_test.py",
     ],
-    python_version = "PY2",
+    python_version = "PY3",
     deps = [
         ":util",
         "//proto/stu3:resources_py_pb2",
